# celltx

./: .gitignore  .readthedocs.yml  README.md  functions.py  model.py  setup.cfg  setup.py
biolayer/: __init__.py  biolayer.py
celltx/: __init__.py  functions.py  model.py  modeller.py  util.py
celltx/biolayer/: biolayer.py
celltx/graphlayer/: __init__.py  graphlayer.py
celltx/odelayer/: __init__.py  odelayer.py
celltx/syslayer/: __init__.py  syslayer.py
docs/: index.rst  requirements.txt
docs/source/: celltx.biolayer.rst  celltx.graphlayer.rst  celltx.odelayer.rst  celltx.rst  celltx.syslayer.rst  conf.py  index.rst  modules.rst
graphlayer/: graphlayer.py
odelayer/: odelayer.py
ref/celltx_example/: Celltx Example CAR-T Cell Therapy.ipynb  Celltx Example SynNotch to CAR-T Cell Therapy.ipynb  graph.dot
syslayer/: syslayer.py
