[metadata]
name = celltx
version = attr: celltx.__version__
description = Cell Therapy- Cell CAD framework for dynamically constructing and evaluating multiscale models of cell therapies.
author = Hersh K. Bhargava
author_email = hello@hershbhargava.com
url = https://github.com/hbhargava7/celltx

[options]
include_packages_data = true

python_requires = >=3.5

install_requires =
	numpy
	scipy
	numba
	smt
	tqdm
	networkx
	sympy
	pygraphviz

packages = find:
